; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_stmt.c_cmp.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_stmt.c_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_4__*, i64, i32)* @cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmp(i32 %0, %struct.TYPE_4__* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @signedint(i32 %12)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %16 = call i32 @idtree(%struct.TYPE_4__* %15)
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @cast(i32 %16, i32 %17)
  %19 = load i32, i32* %9, align 4
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @cnsttree(i32 %19, i64 %20)
  %22 = call i32 @eqtree(i32 %14, i32 %18, i32 %21)
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @listnodes(i32 %22, i32 %23, i32 0)
  ret void
}

declare dso_local i32 @signedint(i32) #1

declare dso_local i32 @listnodes(i32, i32, i32) #1

declare dso_local i32 @eqtree(i32, i32, i32) #1

declare dso_local i32 @cast(i32, i32) #1

declare dso_local i32 @idtree(%struct.TYPE_4__*) #1

declare dso_local i32 @cnsttree(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
